# MBRILA

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
examples/synthetic/: demo_adm.py  demo_common.py  demo_custom_kernel.py  demo_dlag.py  demo_dlag_ssm.py  demo_gpfa_ssm.py  demo_lds.py  demo_matern.py  demo_mdlag_freq.py  demo_mdlag_ssm.py  demo_mdlag_time.py
examples/v1v2/: compare_v1v2_runs.py  demo_adm.py  demo_custom_kernel.py  demo_dlag.py  demo_dlag_ssm.py  demo_mdlag_freq.py  demo_mdlag_ssm.py  demo_mdlag_time.py  v1v2_common.py
notebooks/: nb_helpers.py
notebooks/synthetic/: demo_adm.ipynb  demo_custom_kernel.ipynb  demo_dlag.ipynb  demo_dlag_ssm.ipynb  demo_gpfa_ssm.ipynb  demo_lds.ipynb  demo_matern.ipynb  demo_mdlag_freq.ipynb  demo_mdlag_ssm.ipynb  demo_mdlag_time.ipynb
notebooks/v1v2/: demo_adm.ipynb  demo_custom_kernel.ipynb  demo_dlag.ipynb  demo_dlag_ssm.ipynb  demo_mdlag_freq.ipynb  demo_mdlag_ssm.ipynb  demo_mdlag_time.ipynb
src/mbrila/: __init__.py  api.py
src/mbrila/_testing/: __init__.py  synthetic.py
src/mbrila/core/: __init__.py  base_model.py  data.py  delay_spec.py  inference_engine.py  kernel_spec.py  latent_spec.py  observation_spec.py  registry.py
src/mbrila/delays/: __init__.py  fixed.py  none.py  time_varying.py
src/mbrila/dynamics/: __init__.py  exact_gp.py  free_lds.py  kernel_to_sde.py  markov_gp.py  ssm_base.py
src/mbrila/frequency/: __init__.py  fft.py
src/mbrila/inference/: __init__.py  ard_helpers.py  em_exact.py  kalman_em.py  optim.py  vem_ard.py  vem_ard_freq.py  vem_kalman_ard.py
src/mbrila/inference/kalman/: __init__.py  parallel.py  sequential.py  state.py
src/mbrila/init/: __init__.py  factor_analysis.py  pcca.py  scale_anchor.py
src/mbrila/kernels/: __init__.py  base.py  matern.py  mose.py  validate.py
src/mbrila/models/: __init__.py  adm.py  dlag.py  gpfa.py  lds.py  mdlag.py
src/mbrila/observations/: __init__.py  ard.py  linear_regression.py  multi_region.py
src/mbrila/synthetic/: __init__.py  multiregion.py  scenarios.py
src/mbrila/utils/: device.py
tests/recovery/: test_adm_recovery.py  test_dlag_recovery.py  test_mdlag_freq_recovery.py  test_mdlag_recovery.py  test_mdlag_ssm_recovery.py
tests/unit/: test_adm_components.py  test_adm_pcca_init.py  test_ard_helpers.py  test_ard_observation.py  test_core_data.py  test_core_engine_and_model.py  test_core_specs.py  test_cosine_lr_min.py  test_dlag_components.py  test_dlag_ssm.py  test_em_exact.py  test_exact_gp.py  test_factor_analysis.py  test_fixed_delay.py  test_frequency.py  test_gpfa_and_build_model.py  test_kalman_em_parallel_parity.py  test_kalman_parallel.py  test_kalman_sequential.py  test_kalman_state.py  test_kernel_extensibility.py  test_lagged_cov_grid.py  test_lds_naive_ssm.py  test_linear_regression.py  test_mdlag_ssm.py  test_mdlag_ssm_joint_ll_em.py  test_mose_grad.py  test_no_delay.py  test_pcca_init.py  test_registry.py  test_variational_kalman_inputs.py  test_vem_ard.py  test_vem_ard_freq.py
